adding portfolio pages from other repo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>My Page</title>
+  <meta charset="UTF-8">
+  <title>Brian Cocherell's Page</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-	<h1>Something</h1>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat cum quasi, mollitia repellat itaque facilis asperiores minima enim maxime, saepe, dignissimos reiciendis excepturi praesentium veritatis doloremque commodi magni nisi pariatur.
-	</p>
+
+  <header class="clearfix">
+    <div style="width: 960px; margin:0 auto;">
+      <div id="name">
+        <h1>Brian Cocherell</h1> 
+      </div>
+      <div id="links">
+        <a href="index.html">About</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="contact.html">Contact</a>
+      </div>
+    </div>
+  </header>
+
+  <div class="content clearfix">
+    <section id="main">
+      <h2>About Me</h2>
+      <div style="width: 100%; height: 3px; background: #dcdcdc; overflow: hidden; margin-bottom: 25px;"></div>
+      <img id="bio-image" src="assets/images/me.jpg" alt="Brian Cocherell">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros sollicitudin lorem pharetra commodo. Sed sit amet lorem nunc. Sed pretium lobortis eros quis mattis. In sed justo sed purus lobortis elementum at et purus. Vivamus eleifend nulla convallis, gravida lorem vel, convallis nisi. Suspendisse sodales vitae ligula quis sollicitudin. Cras id ex feugiat, consectetur felis ac, pulvinar tortor. Duis mattis arcu sed mauris facilisis pharetra. Vivamus vitae nisi diam. Cras consequat orci ac tortor tempus efficitur.
+      </p>
+      <p>
+        Morbi auctor nisl ut purus posuere, vitae egestas leo ullamcorper. Sed eget turpis non nunc convallis luctus ut sed ex. Ut ornare luctus nibh, non tempus enim cursus et. Praesent vitae tempus erat. Duis pulvinar porttitor vulputate. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum non cursus ligula. Quisque laoreet justo in sollicitudin porta. Ut eu rhoncus urna. Proin tincidunt eleifend velit, id suscipit mi commodo eget. Sed convallis eleifend consectetur.
+      </p>
+      <p>
+        Donec ac accumsan dui. Nulla non ligula tellus. Aenean non consectetur massa. Curabitur viverra lacus sed tellus sodales fermentum. Phasellus ultrices velit sit amet mi tempor, nec pulvinar tortor fermentum. Suspendisse potenti. Donec gravida erat eu tortor laoreet euismod. Donec sit amet congue tortor. Sed nec lectus tincidunt, volutpat tortor ac, elementum ex. Etiam porttitor condimentum scelerisque. Donec dictum, mauris a commodo vulputate, ipsum neque convallis diam, quis tempus enim leo luctus felis.
+      </p>
+    </section>
+
+    <aside id="sidebar">
+      <h3>Connect with Me</h3> 
+      <div style="width: 100%; height: 2px; background: #ededee; overflow: hidden; margin-bottom: 20px;"></div>
+       <a href="https://github.com/bcocherell" target="_blank">
+        <img id="github" src="assets/images/github.png" alt="GitHub">
+      </a>
+      <a href="https://www.linkedin.com/in/briancocherell/" target="_blank">
+        <img id="linkedin" src="assets/images/linkedin.png" alt="LinkedIn">
+      </a>
+      <a href="https://stackoverflow.com/users/8507601/b-cocherell" target="_blank">
+        <img id="stackoverflow" src="assets/images/stackoverflow.png" alt="Stack Overflow">
+      </a>
+    </aside>
+  </div>    
+
+  <footer class="footer">
+    &copy; Copyright 2017 Brian Cocherell
+  </footer>
+
 </body>
+
 </html>
