--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,15 @@
       <div style="width: 100%; height: 3px; background: #dcdcdc; overflow: hidden; margin-bottom: 25px;"></div>
       <form action="mailto:brian.cocherell@gmail.com" method="post" enctype="text/plain">
         Name<br />
-        <input type="text" name="name" value="John Smith" />
+        <input type="text" name="name" />
         <br /><br />
         Email<br />
-        <input type="text" name="email" value="example@gmail.com">
+        <input type="text" name="email" />
         <br /><br />
         Message<br />
         <textarea name="message" rows="10" cols="30"></textarea>
         <br />
-        <input type="submit" id="submit" value="Submit">
+        <input type="submit" id="submit" value="Submit" />
       </form>
     </section>
 
