--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
 <body>
 
-  <header class="clearfix">
-    <div style="width: 960px; margin:0 auto;">
+  <header>
+    <div id="header-content">
       <div id="name">
         <h1>Brian Cocherell</h1> 
       </div>
@@ -23,10 +23,10 @@
     </div>
   </header>
 
-  <div class="content clearfix">
+  <div id="content">
     <section id="main">
       <h2>Contact</h2>
-      <div style="width: 100%; height: 3px; background: #dcdcdc; overflow: hidden; margin-bottom: 25px;"></div>
+      <div id="thick-line"></div>
       <form action="mailto:brian.cocherell@gmail.com" method="post" enctype="text/plain">
         Name<br />
         <input type="text" name="name" />
@@ -43,20 +43,20 @@
 
     <aside id="sidebar">
       <h3>Connect with Me</h3> 
-      <div style="width: 100%; height: 2px; background: #ededee; overflow: hidden; margin-bottom: 20px;"></div>
+      <div id="thin-line"></div>
       <a href="https://github.com/bcocherell" target="_blank">
-        <img id="github" src="assets/images/github.png" alt="GitHub">
+        <img class="connect-image" src="assets/images/github.png" alt="GitHub">
       </a>
       <a href="https://www.linkedin.com/in/briancocherell/" target="_blank">
-        <img id="linkedin" src="assets/images/linkedin.png" alt="LinkedIn">
+        <img class="connect-image" src="assets/images/linkedin.png" alt="LinkedIn">
       </a>
       <a href="https://stackoverflow.com/users/8507601/b-cocherell" target="_blank">
-        <img id="stackoverflow" src="assets/images/stackoverflow.png" alt="Stack Overflow">
+        <img class="connect-image" src="assets/images/stackoverflow.png" alt="Stack Overflow">
       </a>
     </aside>
   </div>    
 
-  <footer class="footer">
+  <footer id="footer">
     &copy; Copyright 2017 Brian Cocherell
   </footer>
 
