--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
       <div id="thick-line"></div>
       <form action="mailto:brian.cocherell@gmail.com" method="post" enctype="text/plain">
         Name<br />
-        <input type="text" name="name" />
+        <input type="text" name="name" placeholder="John Smith" />
         <br /><br />
         Email<br />
-        <input type="text" name="email" />
+        <input type="text" name="email" placeholder="example@gmail.com" />
         <br /><br />
         Message<br />
         <textarea name="message" rows="10" cols="30"></textarea>
